--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,24 +1,32 @@
+# Ignore node_modules and .env in root, client, and server
+node_modules/
+.env
+
+client/node_modules/
+client/.env
+
+server/node_modules/
+server/.env
+
+# Build output
+dist/
+build/
+
+# TypeScript
+*.tsbuildinfo
+
 # Logs
-logs
+logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS-specific files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+
+# Misc
+npm-debug.log*
+yarn-
